...
    <variable
      name="viewModel"
      type="org.oppia.android.app.topic.lessons.TopicLessonViewModel" />
  </data>

  <androidx.recyclerview.widget.RecyclerView
    android:id="@+id/story_summary_recycler_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/component_color_shared_screen_quaternary_background_color"
    android:clipToPadding="false"
    android:overScrollMode="never"
    android:paddingBottom="@dimen/topic_lessons_fragment_layout_padding_bottom"
...
