...
    <variable
      name="chapterSummary"
      type="org.oppia.app.model.ChapterSummary" />
  </data>

  <LinearLayout
    android:id="@+id/chapter_container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clickable="@{chapterSummary.chapterPlayState != ChapterPlayState.NOT_PLAYABLE_MISSING_PREREQUISITES ? true: false}"
    android:minHeight="48dp"
    android:orientation="horizontal"
    android:paddingStart="4dp"
...
